# chair_manipulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies.rosinstall  package.xml
chair_manipulation/: CMakeLists.txt  package.xml
chair_manipulation_chair_models/: CMakeLists.txt  package.xml
chair_manipulation_chair_models/models/IKEA_chair_BERNHARD/: model.sdf
chair_manipulation_chair_models/models/IKEA_chair_BORJE/: model.config  model.sdf
chair_manipulation_chair_models/models/IKEA_chair_EKTORP/: model.config
chair_manipulation_chair_models/models/IKEA_chair_FUSION/: model.config  model.sdf
chair_manipulation_chair_models/models/IKEA_chair_HENRIKSDAL/: model.config  model.sdf
chair_manipulation_chair_models/models/IKEA_chair_HERMAN/: model.config  model.sdf
chair_manipulation_chair_models/models/IKEA_chair_INGOLF/: model.sdf
chair_manipulation_chair_models/models/IKEA_chair_IVAR/: model.sdf
chair_manipulation_chair_models/models/IKEA_chair_JOKKMOKK/: model.config
chair_manipulation_chair_models/models/IKEA_chair_JULES/: model.config  model.sdf
chair_manipulation_chair_models/models/IKEA_chair_KAUSTBY/: model.sdf
chair_manipulation_chair_models/models/IKEA_chair_KLAPPSTA/: model.config  model.sdf
chair_manipulation_chair_models/models/IKEA_chair_MARIUS/: model.config
chair_manipulation_chair_models/models/IKEA_chair_MARKUS/: model.sdf
chair_manipulation_chair_models/models/IKEA_chair_NILS/: model.config  model.sdf
chair_manipulation_chair_models/models/IKEA_chair_PATRIK/: model.sdf
chair_manipulation_chair_models/models/IKEA_chair_POANG/: model.config
chair_manipulation_chair_models/models/IKEA_chair_PREBEN/: model.config  model.sdf
chair_manipulation_chair_models/models/IKEA_chair_REIDAR/: model.config
chair_manipulation_chair_models/models/IKEA_chair_SIGURD/: model.config
chair_manipulation_chair_models/models/IKEA_chair_SKRUVSTA/: model.config  model.sdf
chair_manipulation_chair_models/models/IKEA_chair_SNILLE/: model.config
chair_manipulation_chair_models/models/IKEA_chair_SOLSTA_OLARP/: model.sdf
chair_manipulation_chair_models/models/IKEA_chair_TOBIAS/: model.config
chair_manipulation_chair_models/models/IKEA_chair_URBAN/: model.sdf
chair_manipulation_chair_models/models/IKEA_chair_VILMAR/: model.config  model.sdf
chair_manipulation_gazebo/: CMakeLists.txt  package.xml
chair_manipulation_gazebo/cfg/: scene.rviz  sensors.yaml
chair_manipulation_gazebo/launch/: detection_advanced.launch  detection_simple.launch  lift.launch  move.launch  moveit_bringup.launch  planning.launch  scene_bringup.launch  scene_bringup_advanced.launch  scene_bringup_simple.launch  spawn_camera.launch
chair_manipulation_gazebo/scripts/: move.py
chair_manipulation_gazebo/src/: move.cpp
chair_manipulation_gazebo/worlds/: 2.world  3.world  4.world  5.world  6.world  7.world  8.world  scene.world
chair_manipulation_grasp_detection/: CMakeLists.txt  package.xml
chair_manipulation_grasp_detection/cfg/: registration_detection.yaml
chair_manipulation_grasp_detection/launch/: depth_image_detection.launch  registration_detection.launch
chair_manipulation_grasp_detection/src/: registration_detection.cpp
chair_manipulation_grasp_detection_advanced/: CMakeLists.txt  package.xml
chair_manipulation_grasp_detection_advanced/cfg/: grasp_database.yaml  pipeline.yaml  rosconsole.conf
chair_manipulation_grasp_detection_advanced/launch/: create_grasp_database.launch  grasp_detection.launch  mesh_reconstruction.launch  point_cloud_segmentation.launch
chair_manipulation_grasp_detection_advanced/src/: create_grasp_database_node.cpp  create_grasp_database_pipeline.cpp  grasp_database.cpp  grasp_database_creator.cpp  grasp_detection_node.cpp  grasp_detection_pipeline.cpp  grasp_sampler.cpp  grasp_synthesizer.cpp  gripper.cpp  ik_checker.cpp  mesh_reconstruction.cpp  mesh_reconstruction_node.cpp  mesh_reconstruction_pipeline.cpp  model.cpp  nonrigid_transform.cpp  point_cloud_matcher.cpp  point_cloud_preprocessor.cpp  point_cloud_receiver.cpp  point_cloud_registration.cpp  point_cloud_segmentation.cpp  point_cloud_segmentation_node.cpp  point_cloud_segmentation_pipeline.cpp  qhull_mutex.cpp  robot.cpp  transform.cpp  utils.cpp  wrench.cpp
chair_manipulation_grasp_detection_advanced/test/: convert_mesh_test.cpp  convert_mesh_test.launch  grasp_sampler_test.cpp  grasp_sampler_test.launch  gripper_test.cpp  gripper_test.launch  load_database_test.cpp  load_database_test.launch  mesh_reconstruction_test.cpp  mesh_reconstruction_test.launch  pcl_viewer.cpp  pcl_viewer.launch  point_cloud_preprocessor_test.cpp  point_cloud_preprocessor_test.launch  registration_test.cpp  registration_test.launch  test_common.cpp  test_common.h  test_grasp_database.yaml  wrench_test.cpp  wrench_test.launch
chair_manipulation_grasp_detection_simple/: CMakeLists.txt  package.xml
chair_manipulation_grasp_detection_simple/cfg/: depth_image_detection.yaml
chair_manipulation_grasp_detection_simple/launch/: depth_image_detection.launch
chair_manipulation_grasp_detection_simple/src/: depth_image_detection_node.cpp
chair_manipulation_grasp_planning/: CMakeLists.txt  package.xml
chair_manipulation_grasp_planning/cfg/: grasp_planner.yaml  rosconsole.conf
chair_manipulation_grasp_planning/launch/: lift.launch  move.launch
chair_manipulation_grasp_planning/src/: grasp_planner.cpp  grasp_planner_node.cpp  gripper_command_action_server_node.cpp  move.cpp  move_node.cpp  utils.cpp
chair_manipulation_msgs/: CMakeLists.txt  package.xml
chair_manipulation_msgs/action/: GraspExecution.action  GripperCommand.action
dual_arm_manipulator_description/: CMakeLists.txt  package.xml
dual_arm_manipulator_description/urdf/: dual_arm_manipulator_robot.urdf.xacro
dual_arm_manipulator_gazebo/: CMakeLists.txt  package.xml
dual_arm_manipulator_gazebo/cfg/: controllers.yaml
dual_arm_manipulator_gazebo/launch/: spawn.launch
ros_wrappers/cpd_wrapper/: CMakeLists.txt  package.xml
ros_wrappers/nanoflann_wrapper/: CMakeLists.txt  package.xml
(+727 files in other folders)
