<?xml version="1.0"?>
<package format="2">
  <name>chair_grasp_detection</name>
  <version>0.0.0</version>
  <description>A package to detect grasps for chairs</description>

  <maintainer email="philipp.badenhoop@hellocodeblog.com">Philipp Badenhoop</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>tf_conversions</depend>

</package>
