<?xml version="1.0"?>
<package format="2">
  <name>chair_manipulation_gazebo</name>
  <version>0.0.0</version>
  <description>A package setting up a world for two robots to grasp a chair in gazebo.</description>

  <maintainer email="philipp.badenhoop@hellocodeblog.com">Philipp Badenhoop</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>chair_manipulation_chair_models</exec_depend>
  <exec_depend>chair_manipulation_grasp_planning</exec_depend>
  <exec_depend>chair_manipulation_grasp_detection_simple</exec_depend>
  <exec_depend>chair_manipulation_grasp_detection_advanced</exec_depend>
  <exec_depend>dual_arm_manipulator_gazebo</exec_depend>
  <exec_depend>dual_arm_manipulator_moveit_config</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>rviz_mesh_display</exec_depend>
  
</package>
