<?xml version="1.0"?>
<package format="2">
  <name>dual_arm_manipulator_gazebo</name>
  <version>0.0.0</version>
  <description>A package that sets up a dual arm manipulator to run be simulated in gazebo.</description>

  <maintainer email="philipp.badenhoop@hellocodeblog.com">Philipp Badenhoop</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dual_arm_manipulator_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>
