<package format="2">
  <name>nanoflann_wrapper</name>
  <version>0.0.0</version>
  <description>A wrapper package to integrate nanoflann into ros</description>

  <maintainer email="philipp.badenhoop@hellocodeblog.com">Philipp Badenhoop</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
